buffer/katesecuretextbutter: conform to KAuth api

KAuth requires the actions to be public slots.

BUG: 479955