src/buffer/katesecuretextbuffer_p.h
@@ -26,6 +26,8 @@ using namespace KAuth;
  */
 class SecureTextBuffer : public QObject
 {
+    Q_OBJECT
+
 public:
     /**
      * Common helper method
@@ -42,7 +44,7 @@ private:
 
     static bool moveFile(const QString &sourceFile, const QString &targetFile);
 
-public:
+public Q_SLOTS:
     /**
      * KAuth action to perform both prepare or move work based on given parameters.
      * We keep this code in one method to prevent multiple KAuth user queries during one save action.
